Improve theme colors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Old Sakha keyboard</string>
+    <string name="app_name">Алфавит Новгородова</string>
     <string name="Colon">:</string>
     <string name="Number0">0</string>
     <string name="Number1">1</string>
